Bug 325405 - Searching for "goo..." gives out Google Chat contacts in an incorrect manner
Summary: Searching for "goo..." gives out Google Chat contacts in an incorrect manner
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contact-runner (other bugs)
Version First Reported In: 0.6.80
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-28 22:47 UTC by sombragris
Modified: 2013-09-29 14:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sombragris 2013-09-28 22:47:31 UTC
Hi. Thanks for KTp, which rocks even more in 0.6.80.

When I want to launch google-chrome by typing that name in the ALT+F2 runner, the first result that I get is some contact from my Google Chat roster. For example, I began typing "goo...", and instead of being offered Google Chrome as a first match, I get a series of contacts, e.g., "John Smith" or similar.

The names don't even have to begin with "g" or "goo", but they all are part of my Google Chat roster.

Reproducible: Always

Steps to Reproduce:
1. Invoke the runner with ALT+F2
2. begin typing "goo"
3. See a contact appear instead of Google Chrome or any other match that would be far more relevant.
Actual Results:  
Any contact from the google chat roster appears

Expected Results:  
allow KRunner to offer a more relevant match.

I use KDE 4.11.1, Slackware64-current.
Comment 1 David Edmundson 2013-09-29 03:08:55 UTC
Makes sense, we can just ingore everything after the @symbol when matching  contact IDs
Comment 2 David Edmundson 2013-09-29 14:00:26 UTC
Git commit 6b6e567f098bcf2372b2a63209374090f5a6c108 by David Edmundson.
Committed on 29/09/2013 at 04:07.
Pushed by davidedmundson into branch 'master'.

Do not include the @blah.com when matching contacts
REVIEW: 112988

M  +4    -1    src/contactrunner.cpp

http://commits.kde.org/ktp-contact-runner/6b6e567f098bcf2372b2a63209374090f5a6c108
Comment 3 David Edmundson 2013-09-29 14:02:22 UTC
Git commit 5b113592d6bb56a7bb5c505df0e45f78c6ef9723 by David Edmundson.
Committed on 29/09/2013 at 04:07.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Do not include the @blah.com when matching contacts
REVIEW: 112988

M  +4    -1    src/contactrunner.cpp

http://commits.kde.org/ktp-contact-runner/5b113592d6bb56a7bb5c505df0e45f78c6ef9723