Do not include the @blah.com when matching contacts

BUG: 325405
REVIEW: 112988